fix:changed the overflow-y value to auto

--- a/frontend/src/styles/core.scss
+++ b/frontend/src/styles/core.scss
@@ -132,7 +132,7 @@ main {
 
 html {
   @extend .ffscroll;
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-behavior: smooth;
   line-height: 1.25;
 }
